# RAG

./: .python-version  pyproject.toml  requirements.txt
Codes/0-dataparsing/: 1-dataingestion.ipynb  2-dataparsing.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
Codes/0-dataparsing/data/databases/: company.db
Codes/0-dataparsing/data/structured_files/: inventory.xlsx
Codes/1-VectorEmbeddingAndDatabases/: 1-embedding.ipynb  2-openaiembeddings.ipynb
Codes/2-Vector_Stores/: 1-chromadb.ipynb  2-faiss.ipynb  doc_1.txt
Codes/2-Vector_Stores/chroma_db/: chroma.sqlite3
Codes/2-Vector_Stores/faiss_index/: index.faiss  index.pkl
